<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_show2"
    tools:context=".ShowActivity">

    <TextView
        android:id="@+id/TxtTotal"
        android:layout_width="276dp"
        android:layout_height="38dp"
        android:layout_marginTop="168dp"
        android:text="Total: "
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.251"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="276dp"
        android:layout_height="38dp"
        android:layout_marginTop="36dp"
        android:text="Estimado Cliente: "
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.251"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtSize"
        android:layout_width="323dp"
        android:layout_height="37dp"
        android:layout_marginTop="100dp"
        android:text="Producto seleccionado: "
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.386"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="141dp"
        android:layout_height="63dp"
        android:layout_marginBottom="92dp"
        android:onClick="regresar"
        android:text="Regresar"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/LyIngre"
        android:layout_width="395dp"
        android:layout_height="305dp"
        android:layout_marginBottom="188dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/txtSelect"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="Ingredientes seleccionados"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtBeef"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/Ingrediente1"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtCheese"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/Ingrediente2"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:id="@+id/txtPepe"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/Ingrediente3"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtBacon"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/Ingrediente4"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtMush"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/Ingrediente5"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtPineA"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/Ingrediente6"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtOlives"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/Ingrediente7"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>